# aula08_bootcamp_python

./: README.md  etl.py  pipeline.py  pyproject.toml
data/: comercio_2024-12-18_20-16-42.parquet  vendas.csv
